add comment minimum sample

--- a/src/markdown/mas/steekproefontwerp_zandleemstreek.Rmd
+++ b/src/markdown/mas/steekproefontwerp_zandleemstreek.Rmd
@@ -1039,7 +1039,7 @@ balansvergelijking %>%
   theme(legend.title = element_blank())
 ```
 
-We zien dat de steekproef vanaf de eerste 50 en nog beter de eerste 100 punten per stratum een goede afspiegeling is van de volledige populatie (boxplots voor steekproef eerste punten en volledig steekproefkader zijn zeer gelijkend).
+We zien dat de steekproef vanaf minimum 50 punten per stratum een goede afspiegeling is van de volledige populatie (boxplots voor steekproef eerste punten en volledig steekproefkader zijn zeer gelijkend).
 
 ## Visualisatie steekproef
 
