--- a/src/markdown/mas/steekproefontwerp_zandleemstreek.Rmd
+++ b/src/markdown/mas/steekproefontwerp_zandleemstreek.Rmd
@@ -1043,16 +1043,30 @@ We zien dat de steekproef vanaf minimum 50 punten per stratum een goede afspiege
 
 ## Visualisatie steekproef
 
-Waar liggen de eerste 50, 100, 200 punten per stratum?
+```{r}
+mapview_n <- function(n) {
+  mapview(perimeters_data, color = "red", alpha.regions = 0, legend = FALSE) +
+  mapview(first_samples(steekproef, n) %>% st_buffer(dist = 300), 
+          zcol = "openheid_sbp", layer = "stratum")
+}
+```
+
+Minstens 50 punten per stratum:
 
 ```{r}
-mapview(perimeters_data, color = "red", alpha.regions = 0, legend = FALSE) +
-  mapview(first_samples(steekproef, 200) %>% st_buffer(dist = 300), 
-          alpha.regions = 1) +
-  mapview(first_samples(steekproef, 100) %>% st_buffer(dist = 300), 
-          col.regions = "green", alpha.regions = 1) +
-  mapview(first_samples(steekproef, 50) %>% st_buffer(dist = 300), 
-          col.regions = "red", alpha.regions = 1) 
+mapview_n(50)
+```
+
+Minstens 100 punten per stratum:
+
+```{r}
+mapview_n(100)
+```
+
+Minstens 50 punten per stratum:
+
+```{r}
+mapview_n(200)
 ```
 
 # Nabehandeling steekproef
