--- a/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
+++ b/src/targets/mas_steekproef_zavelberg/targets_steekproef_zavelberg.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "MAS steekproeftrekking voor Zavelberg en controlegebied"
+title: "MAS steekproeftrekking voor de Zandleemstreek"
 author: "Ward Langeraert, Hans Van Calster"
 date: "`r Sys.Date()`"
 output:
