--- a/src/markdown/mas/steekproefontwerp_zandleemstreek.Rmd
+++ b/src/markdown/mas/steekproefontwerp_zandleemstreek.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "MAS steekproefontwerp zandleemstreek"
-author: "Ward Langeraert"
+author: "Ward Langeraert, Hans Van Calster"
 date: "`r Sys.Date()`"
 bibliography: mas.json
 output:
